# ADSCompStat

./: .gitignore  README.md  config.py  new_workflow.py  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: test.yml
.tmp/: .coverage
.tmp/v/cache/: nodeids
adscompstat/: app.py  bibcodes.py  database.py  exceptions.py  match.py  models.py  tasks.py  tasks_old.py  utils.py
alembic/: env.py
alembic/versions/: 0b91d0dcaadf_new_tables.py  451c42f1578d_empty_init.py  d2c43086a8ab_add_matching_data_tables.py  f0123456789a_add_storage_tables.py  f0123456789a_blank_init.py
tests/: test_database.py  test_match.py  test_tasks.py  test_utils.py
tests/stubdata/input/: .test_metadata.xml.swp  10.1186:300627.long-fake.2023-12-10  10.1186:300627.out.2023-12-10  all_list  alternate_list  canonical_list  deleted_list  doi_links  issn_bibstems  test_log.txt  test_metadata.xml
tests/stubdata/input/UpdateAgent/: 10.3847:4879.out.2023-08-25
tests/stubdata/output/: test_metadata.json
